--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
   <script src="./main.js"></script>
 </head>
 <body>
- 
+  <main class="container">
+    <nav class="mian-nav">
+      <div class="nav-content">
+        <button class="new-game">New game</button>
+        <!-- <button class="restart">Restart</button> -->
+      </div>
+    </nav>
+  </main>
 </body>
 </html>
