--- a/index.html
+++ b/index.html
@@ -16,6 +16,90 @@
         <!-- <button class="restart">Restart</button> -->
       </div>
     </nav>
+    <div class="chess-board">
+      <div class="fields-container">
+        <div class="pieces-row chess-row" data-startColor="black">
+          <div class="figure-field" data-start="rook"></div>
+          <div class="figure-field" data-start="knight"></div>
+          <div class="figure-field" data-start="bishop"></div>
+          <div class="figure-field" data-start="queen"></div>
+          <div class="figure-field" data-start="king"></div>
+          <div class="figure-field" data-start="bishop"></div>
+          <div class="figure-field" data-start="knight"></div>
+          <div class="figure-field" data-start="rook"></div>
+        </div>
+        <div class="pieces-row chess-row" data-startColor="black">
+            <div class="figure-field" data-start="pawn"></div>
+            <div class="figure-field" data-start="pawn"></div>
+            <div class="figure-field" data-start="pawn"></div>
+            <div class="figure-field" data-start="pawn"></div>
+            <div class="figure-field" data-start="pawn"></div>
+            <div class="figure-field" data-start="pawn"></div>
+            <div class="figure-field" data-start="pawn"></div>
+            <div class="figure-field" data-start="pawn"></div>
+        </div>
+        <div class="chess-row">
+          <div class="figure-field"></div>
+          <div class="figure-field"></div>
+          <div class="figure-field"></div>
+          <div class="figure-field"></div>
+          <div class="figure-field"></div>
+          <div class="figure-field"></div>
+          <div class="figure-field"></div>
+          <div class="figure-field"></div>
+        </div>
+        <div class="chess-row">
+          <div class="figure-field"></div>
+          <div class="figure-field"></div>
+          <div class="figure-field"></div>
+          <div class="figure-field"></div>
+          <div class="figure-field"></div>
+          <div class="figure-field"></div>
+          <div class="figure-field"></div>
+          <div class="figure-field"></div>
+        </div>
+        <div class="chess-row">
+          <div class="figure-field"></div>
+          <div class="figure-field"></div>
+          <div class="figure-field"></div>
+          <div class="figure-field"></div>
+          <div class="figure-field"></div>
+          <div class="figure-field"></div>
+          <div class="figure-field"></div>
+          <div class="figure-field"></div>
+        </div>
+        <div class="chess-row">
+          <div class="figure-field"></div>
+          <div class="figure-field"></div>
+          <div class="figure-field"></div>
+          <div class="figure-field"></div>
+          <div class="figure-field"></div>
+          <div class="figure-field"></div>
+          <div class="figure-field"></div>
+          <div class="figure-field"></div>
+        </div>
+        <div class="pieces-row chess-row" data-startColor="white">
+            <div class="figure-field" data-start="pawn"></div>
+            <div class="figure-field" data-start="pawn"></div>
+            <div class="figure-field" data-start="pawn"></div>
+            <div class="figure-field" data-start="pawn"></div>
+            <div class="figure-field" data-start="pawn"></div>
+            <div class="figure-field" data-start="pawn"></div>
+            <div class="figure-field" data-start="pawn"></div>
+            <div class="figure-field" data-start="pawn"></div>
+        </div>
+        <div class="pieces-row chess-row" data-startColor="white">
+            <div class="figure-field" data-start="rook"></div>
+            <div class="figure-field" data-start="knight"></div>
+            <div class="figure-field" data-start="bishop"></div>
+            <div class="figure-field" data-start="queen"></div>
+            <div class="figure-field" data-start="king"></div>
+            <div class="figure-field" data-start="bishop"></div>
+            <div class="figure-field" data-start="knight"></div>
+            <div class="figure-field" data-start="rook"></div>
+        </div>
+      </div>
+    </div>
   </main>
 </body>
 </html>
