--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
   <link rel="stylesheet" href="./main.css" type="text/css">
-  <script src="./main.js"></script>
+  <script src="./webpack-output/bundle.js"></script>
 </head>
 <body>
   <main class="container">
