Removed redundant data-start field from index.html

--- a/index.html
+++ b/index.html
@@ -11,33 +11,13 @@
 
 <body>
     <main class="container">
-        <nav class="mian-nav">
+        <nav class="main-nav">
             <div class="nav-content">
                 <button class="new-game">New game</button>
             </div>
         </nav>
         <div class="chess-board">
             <div class="fields-container">
-                <div class="pieces-row chess-row" data-startColor="black">
-                    <div class="figure-field" data-start="rook"></div>
-                    <div class="figure-field" data-start="knight"></div>
-                    <div class="figure-field" data-start="bishop"></div>
-                    <div class="figure-field" data-start="queen"></div>
-                    <div class="figure-field" data-start="king"></div>
-                    <div class="figure-field" data-start="bishop"></div>
-                    <div class="figure-field" data-start="knight"></div>
-                    <div class="figure-field" data-start="rook"></div>
-                </div>
-                <div class="pieces-row chess-row" data-startColor="black">
-                    <div class="figure-field" data-start="pawn"></div>
-                    <div class="figure-field" data-start="pawn"></div>
-                    <div class="figure-field" data-start="pawn"></div>
-                    <div class="figure-field" data-start="pawn"></div>
-                    <div class="figure-field" data-start="pawn"></div>
-                    <div class="figure-field" data-start="pawn"></div>
-                    <div class="figure-field" data-start="pawn"></div>
-                    <div class="figure-field" data-start="pawn"></div>
-                </div>
                 <div class="chess-row">
                     <div class="figure-field"></div>
                     <div class="figure-field"></div>
@@ -78,25 +58,45 @@
                     <div class="figure-field"></div>
                     <div class="figure-field"></div>
                 </div>
-                <div class="pieces-row chess-row" data-startColor="white">
-                    <div class="figure-field" data-start="pawn"></div>
-                    <div class="figure-field" data-start="pawn"></div>
-                    <div class="figure-field" data-start="pawn"></div>
-                    <div class="figure-field" data-start="pawn"></div>
-                    <div class="figure-field" data-start="pawn"></div>
-                    <div class="figure-field" data-start="pawn"></div>
-                    <div class="figure-field" data-start="pawn"></div>
-                    <div class="figure-field" data-start="pawn"></div>
+                <div class="chess-row">
+                    <div class="figure-field"></div>
+                    <div class="figure-field"></div>
+                    <div class="figure-field"></div>
+                    <div class="figure-field"></div>
+                    <div class="figure-field"></div>
+                    <div class="figure-field"></div>
+                    <div class="figure-field"></div>
+                    <div class="figure-field"></div>
                 </div>
-                <div class="pieces-row chess-row" data-startColor="white">
-                    <div class="figure-field" data-start="rook"></div>
-                    <div class="figure-field" data-start="knight"></div>
-                    <div class="figure-field" data-start="bishop"></div>
-                    <div class="figure-field" data-start="queen"></div>
-                    <div class="figure-field" data-start="king"></div>
-                    <div class="figure-field" data-start="bishop"></div>
-                    <div class="figure-field" data-start="knight"></div>
-                    <div class="figure-field" data-start="rook"></div>
+                <div class="chess-row">
+                    <div class="figure-field"></div>
+                    <div class="figure-field"></div>
+                    <div class="figure-field"></div>
+                    <div class="figure-field"></div>
+                    <div class="figure-field"></div>
+                    <div class="figure-field"></div>
+                    <div class="figure-field"></div>
+                    <div class="figure-field"></div>
+                </div>
+                <div class="chess-row">
+                    <div class="figure-field"></div>
+                    <div class="figure-field"></div>
+                    <div class="figure-field"></div>
+                    <div class="figure-field"></div>
+                    <div class="figure-field"></div>
+                    <div class="figure-field"></div>
+                    <div class="figure-field"></div>
+                    <div class="figure-field"></div>
+                </div>
+                <div class="chess-row">
+                    <div class="figure-field"></div>
+                    <div class="figure-field"></div>
+                    <div class="figure-field"></div>
+                    <div class="figure-field"></div>
+                    <div class="figure-field"></div>
+                    <div class="figure-field"></div>
+                    <div class="figure-field"></div>
+                    <div class="figure-field"></div>
                 </div>
             </div>
         </div>
